Fix some layout issues with width of navbar.

--- a/client/src/components/app-layout/app-layout.module.css
+++ b/client/src/components/app-layout/app-layout.module.css
@@ -4,3 +4,7 @@
   align-items: flex-start;
   gap: 3rem;
 }
+
+.outletContainer {
+  width: 100%;
+}
