--- a/client/src/components/navbar/navbar.module.css
+++ b/client/src/components/navbar/navbar.module.css
@@ -1,5 +1,6 @@
 .navbar {
-  flex-basis: 10rem;
+  width: 11rem;
+  flex-shrink: 0;
 }
 .navList {
   display: flex;
@@ -12,7 +13,7 @@
   padding: 1rem 0.75rem;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.75rem;
   border: 2px solid var(--secondary);
   border-radius: 10px;
   text-decoration: none;
